# VIT-Student-Helper

./: .gitignore  README.md  Understanding the project.txt  main.py  pyproject.toml  requirements.txt
backend/: api.py  main.py
frontend/: index.html
